2000-07-17  Peter Williams  <peterw@helixcode.com>

	* camel-object.c (camel_type_lock_up): New function; the
	Camel type_system lock is now fakey-recursive, being controlled
	by a semaphore that goes up and down and is protected by another
	lock. Theoretically all we need is the lock on the semaphore,
	but this we catch exceptions "better" (by deadlocking).
	(camel_type_lock_down): Corresponding to above.
	(all functions): s,G_LOCK,camel_type_lock_up, etc.

2000-07-14  Peter Williams  <peterw@helixcode.com>

	* camel-object.c : Implement 'events', which are suspiciously
	like signals except without all the marshalling baggage, and
	with quasi-thread-safety.
	(camel_object_class_declare_event): New func.
	(camel_object_hook_event): Ditto.
	(camel_object_trigger_event): Ditto.
	(obj_class_init): Declare the "finalize" event.
	(obj_class_finalize): Free the hashtable of events->preps
	(obj_finalize): Free the hashtable of events->hooklists
	(camel_object_unref): Trigger the finalize event (ourselves,
	to prevent massively unpleasant looping things.)
	
2000-07-14  Peter Williams  <peterw@helixcode.com>
	
	* camel-object.c (make_global_classfuncs): Change to return
	a CamelObjectClass. Change parents to a GSList and free it
	when done.
	(camel_object_new): Don't allocate a classfuncs for every object;
	merely give it a reference to the global_classfuncs. Convert
	parents to a GSList and free it when done.
	(camel_object_unref): Don't free the classfuncs. Free the parents
	list, which is changed to a GSList.

2000-07-13  Peter Williams  <peterw@helixcode.com>

	* camel-object.c: Rewritten to not be based on GtkObject,
	but a tiny threadsafe ripoff thereof. Objects still cannot
	be shared across threads, but ref/unref/destroy/new/etc
	will work. Signals are not implemented because doing it
	robustly would be a major pain in the butt, but class
	functions are. There's a small demonstration that it doesn't
	crash in ./temp-test.c: build it with ./make-test.sh.